--- a/TP10/client/package.json
+++ b/TP10/client/package.json
@@ -3,18 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite --port 3001",
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview "
+    "preview": "vite preview"
   },
   "dependencies": {
-    "node-sass": "^9.0.0",
-    "sass": "^1.62.1",
-    "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.3.5"
+    "vite": "^4.3.9"
   }
 }
